<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:title="@string/tab_profile" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/avatarImageView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="10dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toTopOf="@id/tvText"
                    app:layout_constraintStart_toStartOf="parent"
                    fresco:placeholderImage="@mipmap/ic_launcher"
                    fresco:placeholderImageScaleType="fitCenter"
                    tools:background="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/fullNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@tools:sample/full_names" />
            </LinearLayout>

            <kz.sozdik.widgets.TitledTextView
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                app:description="@string/sign_in_description"
                app:title="@string/login_title" />

            <kz.sozdik.widgets.TitledTextView
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                app:description="@string/sign_up_description"
                app:title="@string/register_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/about"
                android:textAppearance="@style/AppTheme.TextAppearance.Title1" />

            <kz.sozdik.widgets.TitledTextView
                android:id="@+id/rateAppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                app:description="@string/rate_app_summary"
                app:title="@string/rate_app" />

            <kz.sozdik.widgets.TitledTextView
                android:id="@+id/feedbackButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                app:description="@string/write_to_developers"
                app:title="@string/communicate" />

            <kz.sozdik.widgets.TitledTextView
                android:id="@+id/shareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                app:description="@string/share_summary"
                app:title="@string/share" />

            <kz.sozdik.widgets.TitledTextView
                android:id="@+id/appVersionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                app:description="@string/rate_app_summary"
                app:title="@string/app_name" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>